branches/0.3/src/objects/Widget__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gadget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WidgetUrl__c</fullName>
        <label>WidgetUrl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Widget</label>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>